# notiq

./: .dockerignore  .gitignore  LICENSE  PRD.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  rust.yml
docker/: Dockerfile.linux
scripts/: build-linux.mjs  bump-version.mjs  png-to-ico.py  sync-icons.mjs
src/: App.css  App.tsx  main.tsx  mainApp.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  sticky-note.json
src-tauri/icons/: icon.icns
src-tauri/linux/: notiq.desktop
src-tauri/mime/: notiq-mime.xml
src-tauri/nsis/: installer-hooks.nsi
src-tauri/src/: ai.rs  lib.rs  main.rs
src/config/: app.ts
src/hooks/: useAiChatPanel.ts  useClickOutside.ts  useCloseTab.ts  useCommands.tsx  useCopyToClipboard.ts  useEscapeKey.ts  useFileWatcher.ts  useGlobalContextMenu.tsx  useGlobalShortcuts.ts  useScrollSync.ts  useSession.ts  useTerminalPanel.ts  useUpdater.ts
src/lib/: activeEditor.ts  attachments.ts  autostart.ts  dom.ts  domTooltip.ts  fileOps.ts  forceGraph.ts  formatter.ts  graph.ts  language.ts  menuItems.tsx  monacoOptions.ts  monacoWorkers.ts  pasteImage.ts  pathUtils.test.ts  pathUtils.ts  pdfExport.ts  remarkAlerts.ts  remarkWikiLinks.ts  resolveNote.ts  session.ts  stickyNote.ts  tauriWindow.ts  themes.ts  toast.ts  updater.ts
src/store/: index.ts  preferences.ts  selectors.ts  stickyNoteStore.ts
src/stubs/: noop-kapsule.ts
src/styles/: ai.css  base.css  editor.css  (+6 more)
(+72 files in other folders)
